--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
-<title>Homepage</title>
+<title>Ingrid Jin</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -39,14 +39,14 @@
 <body>
 <header class="header" id="header"><!--header-start-->
 	<div class="container">
-    	<figure class="logo animated fadeInDown delay-07s">
-        	<a href="#"><img src="img/logo.png" alt=""></a>
+    	<figure id="profile-figure" class="logo animated fadeInDown delay-07s">
+        	<a id="profile-pic" href="#"><img src="img/cutmypic.png" id="profile" alt=""></a>
         </figure>
-        <h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
+        <h1 class="animated fadeInDown delay-07s">I N G R I D &nbsp; J I N</h1>
         <ul class="we-create animated fadeInUp delay-1s">
-        	<li>We are a digital agency that loves crafting beautiful websites.</li>
+        	<li>Full-stack web developer</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#service">Portfolio</a>
     </div>
 </header><!--header-end-->
 
