add About Me Section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 	<div class="container">
         <ul class="main-nav">
         	<li><a href="#header">Home</a></li>
-            <li><a href="#service">About Me</a></li>
-            <li><a href="#Portfolio">Technologies</a></li>
+            <li><a href="#service">About</a></li>
+            <!-- <li><a href="#Portfolio">Technologies</a></li> -->
             <!-- <li class="small-logo"><a href="#header"><img src="img/cutmypic.png" id="profile-icon" alt=""></a></li> -->
             <li><a href="#client">Projects</a></li>
             <!-- <li><a href="#team">Contact</a></li> -->
@@ -68,20 +68,21 @@
 
 <section class="main-section" id="service"><!--main-section-start-->
 	<div class="container">
-    	<h2>Services</h2>
-    	<h6>We offer exceptional service with complimentary hugs.</h6>
+    	<h2 id="hello">Hello, I'm Ingrid.</h2>
+    	<!-- <h6>We offer exceptional service with complimentary hugs.</h6> -->
         <div class="row">
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
                 	<div class="service-list-col1">
-                    	<i class="fa-paw"></i>
+                    	<!-- <i class="fa-paw"></i> -->
                     </div>
                 	<div class="service-list-col2">
-                        <h3>branding &amp; identity</h3>
-                        <p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+                        <!-- <h3>branding &amp; identity</h3> -->
+                        <h6 id="about-me">I'm a Boston-based full-stack developer with a background in tech. As someone who has held a lifelong interest in productivity, I am always on the hunt for more efficient ways of doing things. <br><br>In my time working in product support, I enjoyed delivering creative and effective solutions to clients as well as my team. I spent extensive time absorbing the technical details of the platforms I worked with, which led me to dabble in programming. It wasn't long before I realized I wanted to build applications that help people and businesses make the most of their time.<br><br>
+                          Currently, I am working to build up my skills in various technologies and refactoring my recent projects. I look forward to contributing to a team that strives to build streamlined, impactful tools for its users.</h6>
                     </div>
                 </div>
-                <div class="service-list">
+                <!-- <div class="service-list">
                 	<div class="service-list-col1">
                     	<i class="fa-gear"></i>
                     </div>
@@ -106,8 +107,8 @@
                 	<div class="service-list-col2">
                         <h3>24/7 Support</h3>
                         <p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
             	<img src="img/macbook-pro.png" alt="">
