--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="#service">About</a></li>
             <!-- <li><a href="#Portfolio">Technologies</a></li> -->
             <!-- <li class="small-logo"><a href="#header"><img src="img/cutmypic.png" id="profile-icon" alt=""></a></li> -->
-            <li><a href="#client">Projects</a></li>
+            <li><a href="#Portfolio">Projects</a></li>
             <!-- <li><a href="#team">Contact</a></li> -->
             <!-- <li><a href="#contact">Contact</a></li> -->
         </ul>
@@ -70,17 +70,19 @@
 	<div class="container">
     	<h2 id="hello">Hello, I'm Ingrid.</h2>
     	<!-- <h6>We offer exceptional service with complimentary hugs.</h6> -->
-        <div class="row">
-        	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+        <!-- <div class="row"> -->
+        	<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
-                	<div class="service-list-col1">
-                    	<!-- <i class="fa-paw"></i> -->
-                    </div>
+                	<!-- <div class="service-list-col1">
+                    	<! <i class="fa-paw"></i> -->
+                    <!-- </div> -->
                 	<div class="service-list-col2">
                         <!-- <h3>branding &amp; identity</h3> -->
                         <h6 id="about-me">I'm a Boston-based full-stack developer with a background in tech. As someone who has held a lifelong interest in productivity, I am always on the hunt for more efficient ways of doing things. <br><br>In my time working in product support, I enjoyed delivering creative and effective solutions to clients as well as my team. I spent extensive time absorbing the technical details of the platforms I worked with, which led me to dabble in programming. It wasn't long before I realized I wanted to build applications that help people and businesses make the most of their time.<br><br>
-                          Currently, I am working to build up my skills in various technologies and refactoring my recent projects. I look forward to contributing to a team that strives to build streamlined, impactful tools for its users.</h6>
+                          Currently, I am working to refine my skills in various technologies and refactoring my recent projects. I look forward to contributing to a team that strives to build streamlined, impactful tools for its users.</h6>
                     </div>
+
+
                 </div>
                 <!-- <div class="service-list">
                 	<div class="service-list-col1">
@@ -110,17 +112,33 @@
                     </div> -->
                 <!-- </div> -->
             </div>
-            <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<img src="img/macbook-pro.png" alt="">
+            <figure class="col-lg-5 text-right wow fadeInUp delay-02s" id="technologies-figure">
+              <h2 id="technologies">Technologies Used</h2>
+            	<img src="img/js-logo.png" class="logos" alt="">
+              <img src="img/jQurery-logo.png" class="logos" alt="">
+              <img src="img/ruby-logo.png" class="logos" alt="">
+              <img src="img/rails-logo.png" class="logos" alt="">
+              <img src="img/handlebars-logo.png" class="logos" alt="">
+              <img src="img/html-logo.png" class="logos" alt="">
+              <img src="img/css-logo.png" class="logos" alt="">
+              <img src="img/mongodb-logo.png" class="logos" alt="">
+              <img src="img/nodejs-logo.png" class="logos" alt="">
+              <img src="img/express-logo.png" class="logos" alt="">
+              <img src="img/postgresql-logo.png" class="logos" alt="">
+              <img src="img/python-logo.png" class="logos" alt="">
+              <img src="img/bootstrap-logo.png" class="logos" alt="">
+              <img src="img/heroku-logo.png" class="logos" alt="">
+              <img src="img/sass-logo.png" class="logos" alt="">
+              <img src="img/emberjs-logo.png" class="logos" alt="">
             </figure>
 
-        </div>
+        <!-- </div> -->
 	</div>
 </section><!--main-section-end-->
 
 
 
-<section class="main-section alabaster"><!--main-section alabaster-start-->
+<!-- <section class="main-section alabaster">
 	<div class="container">
     	<div class="row">
 			<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
@@ -160,7 +178,7 @@
             </div>
         </div>
 	</div>
-</section><!--main-section alabaster-end-->
+</section> -->
 
 
 
