add projects and resume

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         	<li>Full-stack web developer</li>
         </ul>
             <a class="link animated fadeInUp delay-1s servicelink" href="#service">Portfolio</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="ingrid-jin-resume.pdf">Resume</a>
     </div>
 </header><!--header-end-->
 
@@ -182,38 +183,53 @@
 
 
 
-<section class="main-section paddind" id="Portfolio"><!--main-section-start-->
+<section class="main-section paddind alabaster" id="Portfolio"><!--main-section-start-->
 	<div class="container">
-    	<h2>Portfolio</h2>
-    	<h6>Fresh portfolio of designs that will keep you wanting more.</h6>
+    	<h2>Projects</h2>
+    	<h6>Some of my recent work.</h6>
       <div class="portfolioFilter">
         <ul class="Portfolio-nav wow fadeIn delay-02s">
-        	<li><a href="#" data-filter="*" class="current" >All</a></li>
-            <li><a href="#" data-filter=".branding" >Branding</a></li>
-            <li><a href="#" data-filter=".webdesign" >Web design</a></li>
-            <li><a href="#" data-filter=".printdesign" >Print design</a></li>
-            <li><a href="#" data-filter=".photography" >Photography</a></li>
+        	<li class="list-button"><a href="#" data-filter="*" class="current" >All</a></li>
+            <li class="list-button"><a href="#" data-filter=".assemblednews" >Express + MongoDB</a></li>
+            <li class="list-button"><a href="#" data-filter=".whichbeach" >JavaScript + Rails</a></li>
+            <!-- <li><a href="#" data-filter=".whichbeach" >Which Beach</a></li> -->
+            <!-- <li><a href="#" data-filter=".photography" >Photography</a></li> -->
         </ul>
        </div>
 
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
-            	<div class=" Portfolio-box printdesign">
-                	<a href="#"><img src="img/Portfolio-pic1.jpg" alt=""></a>
-                	<h3>Foto Album</h3>
-                    <p>Print Design</p>
+            	<div class=" Portfolio-box assemblednews">
+                	<a href="https://jingrid.github.io/assembled-news-frontend/"><img src="img/Portfolio-pic1.jpg" alt=""></a>
+                	<h3>Assembled News</h3>
+                  <p>An aggregate news site to keep you informed.</p>
+                    <p>
+                      <a href="https://jingrid.github.io/assembled-news-frontend/">Visit App</a><br>
+                      <a href="https://github.com/jingrid/assembled-news-frontend">Front-end Repo</a><br>
+                      <a href="https://github.com/jingrid/assembled-news-backend">Back-end Repo</a>
+                    </p>
                 </div>
-                <div class="Portfolio-box webdesign">
-                	<a href="#"><img src="img/Portfolio-pic2.jpg" alt=""></a>
-                	<h3>Luca Theme</h3>
-                    <p>Web Design</p>
+                <div class="Portfolio-box assemblednews">
+                	<a href="https://thunder-fly.github.io/Project-3-frontend/"><img src="img/Portfolio-pic2.jpg" alt=""></a>
+                	<h3>Sserpdrow</h3>
+                  <p>Create and manage your webpages + blog.</p>
+                  <p>
+                    <a href="https://thunder-fly.github.io/Project-3-frontend/">Visit App</a><br>
+                    <a href="https://github.com/thunder-fly/Project-3-frontend">Front-end Repo</a><br>
+                    <a href="https://github.com/thunder-fly/Project-3-backend">Back-end Repo</a>
+                  </p>
                 </div>
-                <div class=" Portfolio-box branding">
-                	<a href="#"><img src="img/Portfolio-pic3.jpg" alt=""></a>
-                	<h3>Uni Sans</h3>
-                    <p>Branding</p>
+                <div class=" Portfolio-box whichbeach">
+                	<a href="https://jingrid.github.io/which-beach/"><img src="img/Portfolio-pic3.jpg" alt=""></a>
+                	<h3>Which Beach</h3>
+                  <p>A database that helps you pick a beach to visit.</p>
+                  <p>
+                    <a href="https://jingrid.github.io/which-beach/">Visit App</a><br>
+                    <a href="https://github.com/jingrid/which-beach">Front-end Repo</a><br>
+                    <a href="https://github.com/jingrid/Project-2-backend">Back-end Repo</a>
+                  </p>
                 </div>
-                <div class=" Portfolio-box photography" >
+                <!-- <div class=" Portfolio-box photography" >
                 	<a href="#"><img src="img/Portfolio-pic4.jpg" alt=""></a>
                 	<h3>Vinyl Record</h3>
                     <p>Photography</p>
@@ -227,12 +243,12 @@
                 	<a href="#"><img src="img/Portfolio-pic6.jpg" alt=""></a>
                 	<h3>Windmills</h3>
                     <p>Photography</p>
-                </div>
+                </div> -->
     </div>
-</section><!--main-section-end-->
+</section>
 
 
-<section class="main-section client-part" id="client"><!--main-section client-part-start-->
+<!-- <section class="main-section client-part" id="client"><
 	<div class="container">
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
@@ -249,8 +265,8 @@ we were well fed and drunk all the time!</p>
             </a></li>
         </ul>
     </div>
-</section><!--main-section client-part-end-->
-<div class="c-logo-part"><!--c-logo-part-start-->
+</section>
+<div class="c-logo-part">
 	<div class="container">
     	<ul>
         	<li><a href="#"><img src="img/c-liogo1.png" alt=""></a></li>
@@ -260,8 +276,8 @@ we were well fed and drunk all the time!</p>
             <li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
     	</ul>
 	</div>
-</div><!--c-logo-part-end-->
-<section class="main-section team" id="team"><!--main-section team-start-->
+</div>
+<section class="main-section team" id="team">
 	<div class="container">
         <h2>team</h2>
         <h6>Take a closer look into our amazing team. We won’t bite.</h6>
