add social and project screenshots
add social icons and screenshots of Assembled News and Which Beach

--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>Full-stack web developer</li>
         </ul>
+        <div class="row center">
+        <ul class="social-link">
+          <li class="github"><a href="https://github.com/jingrid" target="_blank"><i class="fa-github"></i></a></li>
+            <li class="envelope"><a href="mailto:contact@ingridjin.com" target="_blank"><i class="fa-envelope"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ingridjin/" target="_blank"><i class="fa-linkedin"></i></a></li>
+        </ul>
+      </div>
             <a class="link animated fadeInUp delay-1s servicelink" href="#service">Portfolio</a>
-            <a class="link animated fadeInUp delay-1s servicelink" href="ingrid-jin-resume.pdf">Resume</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="ingrid-jin-resume.pdf" target="_blank">Resume</a>
     </div>
 </header><!--header-end-->
 
@@ -200,7 +207,7 @@
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
             	<div class=" Portfolio-box assemblednews">
-                	<a href="https://jingrid.github.io/assembled-news-frontend/"><img src="img/Portfolio-pic1.jpg" alt=""></a>
+                	<a href="https://jingrid.github.io/assembled-news-frontend/"><img src="img/assembled-news.png" alt=""></a>
                 	<h3>Assembled News</h3>
                   <p>An aggregate news site to keep you informed.</p>
                     <p>
@@ -220,7 +227,7 @@
                   </p>
                 </div>
                 <div class=" Portfolio-box whichbeach">
-                	<a href="https://jingrid.github.io/which-beach/"><img src="img/Portfolio-pic3.jpg" alt=""></a>
+                	<a href="https://jingrid.github.io/which-beach/"><img src="img/which-beach.png" alt=""></a>
                 	<h3>Which Beach</h3>
                   <p>A database that helps you pick a beach to visit.</p>
                   <p>
@@ -329,7 +336,7 @@ we were well fed and drunk all the time!</p>
             </div>
         </div>
     </div>
-</section><!--main-section team-end-->
+</section><!main-section team-end-->
 
 
 
@@ -361,6 +368,7 @@ we were well fed and drunk all the time!</p>
                 </div>
                 <ul class="social-link">
                 	<li class="twitter"><a href="#"><i class="fa-twitter"></i></a></li>
+                  <li class="github"><a href="#"><i class="fa-github"></i></a></li>
                     <li class="facebook"><a href="#"><i class="fa-facebook"></i></a></li>
                     <li class="pinterest"><a href="#"><i class="fa-pinterest"></i></a></li>
                     <li class="gplus"><a href="#"><i class="fa-google-plus"></i></a></li>
