--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         	<li>Full-stack web developer</li>
         </ul>
         <div class="row center">
-        <ul class="social-link">
-          <li class="github"><a href="https://github.com/jingrid" target="_blank"><i class="fa-github"></i></a></li>
-            <li class="envelope"><a href="mailto:contact@ingridjin.com" target="_blank"><i class="fa-envelope"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/in/ingridjin/" target="_blank"><i class="fa-linkedin"></i></a></li>
+        <ul class="social-icons">
+          <li class="github"><a href="https://github.com/jingrid" target="_blank"><img src="img/github-logo.png" alt=""></a></li>
+            <li class="envelope"><a href="mailto:contact@ingridjin.com" target="_blank"><img src="img/email-icon.png" alt=""></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ingridjin/" target="_blank"><img src="img/linkedin-icon.png" alt=""></a></li>
         </ul>
       </div>
             <a class="link animated fadeInUp delay-1s servicelink" href="#service">Portfolio</a>
